tests/error/poly_errors/unitary_generic_function_error.err
Error: Type mismatch (at $FILE:16:18)
   | 
14 | @guppy
15 | def main() -> None:
16 |     identity[int](True)
   |                   ^^^^ Expected argument of type `int`, got `bool`

Guppy compilation failed due to 1 previous error
